# wwi-data-pipeline-dashboard

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  wwi-data-pipeline-dashboard.ipynb
_sources/contents/: 01_database_connection.ipynb  02_data_description_and_exploration.ipynb  03_designing_the_analytical_database.ipynb  07_dashboard_mockup.ipynb  08_compiling_brief_documentation.ipynb  09_final_dashboard.ipynb  10_general_conclusion.ipynb
_static/: custom.js
assets/: dashboard_mockup.drawio  for_dataLens_wide_world_importers.json
contents/: 01_database_connection.html  02_data_description_and_exploration.html  03_designing_the_analytical_database.html  04_creating_materialized_views.html  05_etl_process.html  06_dashboard_canvas.html  07_dashboard_mockup.html  08_compiling_brief_documentation.html  09_final_dashboard.html  10_general_conclusion.html
docs/source/: building_startup_analytics  conf.py  index.ipynb
docs/source/_static/: custom.css
docs/source/contents/: 04_creating_materialized_views.ipynb  05_etl_process.ipynb  06_dashboard_canvas.ipynb
