[project]
name = "wwi-data-pipeline-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Grigoryev",email = "pavel.grigoryev.ds@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython-sql (>=0.5.0,<0.6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "prettytable (==3.0.0)"
]

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
myst-nb = "^1.3.0"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.7"
sphinx-favicon = "^1.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.1.4"
sphinx-inline-tabs = "^2023.4.21"
linkify-it-py = "^2.0.3"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

